# globbal

./: .replit  README.md  db.py  links.json  links.txt  main.py  model.py  pyproject.toml
crawler/: __main__.py  ballsack.py  blocklist.txt  funnyevals.py  main.old.py  main.py  words.txt
static/: style.css
templates/: index.html  searchtemplate.html
