[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "creh-urls-redirec>=0.1.8",
    "db>=0.1.1",
    "flask>=3.1.1",
    "psycopg2-binary==2.9.10",
    "selenium==4.27.1",
    "sqlalchemy>=2.0.41",
]
